--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ python-dotenv==1.0.0
 SQLAlchemy==2.0.22
 alembic==1.12.0
 asyncpg==0.28.0
-pydantic==2.4.2 
+pydantic==2.4.2
+psycopg2-binary==2.9.9 
