--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-aiogram==3.2.0
-python-dotenv==1.0.0
-SQLAlchemy==2.0.22
-alembic==1.12.0
-asyncpg==0.28.0
-pydantic==2.4.2
-psycopg2-binary==2.9.9 
+aiogram>=3.0.0
+alembic>=1.12.0
+SQLAlchemy>=2.0.0
+asyncpg>=0.28.0
+python-dotenv>=1.0.0
+aiohttp>=3.8.5
+pytz>=2023.3
+Jinja2>=3.1.2
+pydantic>=2.3.0
+pytest>=7.4.0
+pytest-asyncio>=0.21.1
