--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: talkerybot
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python run.py
+    startCommand: python custom_registration.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.12
@@ -11,7 +11,5 @@ services:
         sync: false
       - key: DATABASE_URL
         sync: false
-      - key: WEBHOOK_HOST
-        sync: false
       - key: PORT
-        value: 10000 
+        value: 10000
